Improved Mobs 1.5.0
================
- Added magic resistance properties to mobs. Reduces all magic damage by x %.
- Added auto targeting options to mobs to make mobs able to target other mobs. e.g. all zombies attack skeletons.
	Default is not used so you need to configure it yourself.
- Added projectile damage boosting since just increased attack damage of mobs dont apply to fired projectiles.
- Fix for entity registry names not working for black/whitelist (#20)

Improved Mobs 1.4.1
================
- Hopefully fix #15
- Added breaking point in stealing ai.
- Added mod blacklist support
- Improved the breakable blocks black/whitelist. Look at the description to see if you need to update your list

Improved Mobs 1.4.0
================

- Revamped item use ai to make adding stuff easier
- Added techguns mod support. All Mobs are now able to use guns
- Added Reforged mod support. Mobs are now able to use items (except the boomerang since it crashes)
- Updated Tenshilib dependency to version 1.1.0